--- a/src/_scss/pages/reviewData/leftSide/_fileStats.scss
+++ b/src/_scss/pages/reviewData/leftSide/_fileStats.scss
@@ -7,6 +7,7 @@
 
     .row {
         margin: 0 0 rem(5) 0;
+        position: relative;
 
         .left-col {
             text-align: right;
@@ -16,6 +17,9 @@
         .data {
             font-weight: $font-semibold;
             padding-left: rem(5);
+            position: absolute;
+            bottom: 0;
+            right: 0;
         }
     }
 }
