--- a/src/_scss/pages/reviewData/narrative/narrative.scss
+++ b/src/_scss/pages/reviewData/narrative/narrative.scss
@@ -1,41 +1,44 @@
 .narrative-wrapper {
 
-    &.col-md-8 {
-        padding-left: 0;
+    padding: rem(30);
+    padding-top: rem(20);
+    background-color: $color-gray-lightest;
+
+    h4 {
+        margin: 0;
+        margin-bottom: rem(20);
+        font-size: rem(18);
     }
 
-    .gray-bg {
-        padding: 15px;
-        padding-top: 5px;
-        background-color: $color-gray-lightest;
+    h5 {
+        margin: rem(5) 0 rem(5) rem(20);
+        font-size: $base-font-size;
+        font-weight: 400;
     }
 
     .row {
         margin-bottom: 0;
     }
 
-    @media(max-width: $medium-screen) {
-        select {
-            margin-bottom: 1rem;
-        }
-    }
+    .save-buttons {
+        @include display(flex);
+        @include justify-content(flex-end);
 
-    textarea {
-        width: 100%;
-        height: 10rem;
-    }
-
-    .usa-da-button {
-        @import "../../../components/buttons/_optional";
-        @include optionalButton;
-
-        float: right;
-
-        &.btn-default {
-            background: white;
-
-            &:active {
-                background: white;
+        .usa-da-button {
+            @import "../../../components/buttons/_optional";
+            @include optionalButton;
+            margin-top: rem(20);
+            padding: rem(5) rem(25);
+            font-weight: 600;
+    
+            &.btn-transparent {
+                background-color: transparent;
+                color: $color-primary;
+    
+                &:hover {
+                    background-color: transparent;
+                    color: $color-primary-darker;
+                }
             }
         }
     }
@@ -63,17 +66,41 @@
     }
 
     .narrative-box {
+        margin-left: rem(20);
         padding-bottom: 10px;
+
+        textarea {
+            width: 100%;
+            max-width: 100%;
+            padding: rem(10);
+        }
     }
 
     .usa-da-download {
         // implement the download button
         @import "../../../components/buttons/_download";
         @include downloadButton;
-    }
+        margin-left: rem(20);
+        margin-top: rem(15);
 
-    h4 {
-        margin-bottom: rem(10);
+        color: $color-primary;
+        font-weight: 600;
+        font-size: rem(14);
+
+        & .usa-da-icon.usa-da-download-report {
+            & svg {
+                fill: $color-primary;
+            }
+        }
+
+        &:hover {
+            color: $color-primary-darker;
+            & .usa-da-icon.usa-da-download-report {
+                & svg {
+                    fill: $color-primary-darker;
+                }
+            }
+        }
     }
 
     p {
