Small tweak to the way a button is displayed for simplicity

--- a/src/_scss/pages/reviewData/narrative/narrative.scss
+++ b/src/_scss/pages/reviewData/narrative/narrative.scss
@@ -112,11 +112,13 @@
 
         .usa-da-download {
             // implement the download button
-            @import "../../../components/buttons/_download";
-            @include downloadButton;
+            @import "../../../components/buttons/_optional";
+            @include optionalButton;
             margin-left: rem(20);
             margin-top: 0;
+            padding: rem(0) 0;
     
+            background-color: transparent;
             color: $color-primary;
             font-weight: 600;
             font-size: rem(14);
