Adding a set height for Firefox

--- a/src/_scss/pages/reviewData/narrative/narrative.scss
+++ b/src/_scss/pages/reviewData/narrative/narrative.scss
@@ -58,6 +58,7 @@
 
         textarea {
             width: 100%;
+            height: rem(41);
             max-width: 100%;
             padding: rem(10);
         }
