--- a/src/_scss/pages/reviewData/submissionButtons.scss
+++ b/src/_scss/pages/reviewData/submissionButtons.scss
@@ -14,29 +14,33 @@
             padding-left: 0;
         }
 
-        .left-link{
-            @include flex(1 1 0);
-            position: relative;
-
-            margin-right: 7px;
-
-            @media(max-width: $medium-screen) {
-                display: block;
-                margin: 0;
-                margin-top: rem(15);
+        .revert-revalidate-buttons {
+            .left-link{
+                position: relative;
+                width: rem(150);
+                float: left;
+                margin-right: rem(10);
+    
+                @media(max-width: $medium-screen) {
+                    display: block;
+                    margin: 0;
+                    margin-top: rem(15);
+                }
             }
         }
-
-        .right-link {
-            @include flex(1 1 0);
-            position: relative;
-
-            @media(max-width: $medium-screen) {
-                display: block;
-                margin-top: 1.5rem;
+        
+        .publish-certify-buttons {
+            .right-link {
+                position: relative;
+                width: rem(300);
+                float: left;
+    
+                @media(max-width: $medium-screen) {
+                    display: block;
+                    margin-top: 1.5rem;
+                }
             }
         }
-
 
         .usa-da-button {
             @import "../../components/buttons/_primary";
@@ -60,7 +64,12 @@
                     @media(max-width:$medium-screen) {
                         margin-left: 0;
                     }
-                }
+                } 
+            }
+
+            &.btn-primary-alt {
+                @include btnBase($color-primary, $color-gray-lightest);
+                border: none;
             }
 
             .button-content {
@@ -82,6 +91,26 @@
                 height: 2.4rem;
                 width: 2.6rem;
             }
+        }
+    }
+}
+
+.notify-button {
+    text-align: center;
+    float: right;
+    margin: rem(10);
+    margin-right: 0;
+    height: 2.4rem;
+
+    a {
+        font-weight: $font-bold;
+    
+        & svg {
+            @include flex(1 1 auto);
+            position: relative;
+            margin-right: rem(5);
+            height: 2.4rem;
+            width: 2.6rem;
         }
     }
 }
