--- a/src/_scss/pages/reviewData/submissionButtons.scss
+++ b/src/_scss/pages/reviewData/submissionButtons.scss
@@ -3,42 +3,68 @@
 
     .revert-revalidate-buttons {
         @include display(flex);
+        @include flex-direction(column);
 
         button {
-            width: rem(136);
-            margin-right: rem(10);
+            width: 100%;
+            margin-top: rem(15);
+            display: block;
 
-            @media(max-width: $medium-screen) {
-                display: block;
+            @media(min-width: $medium-screen) {
+                display: inline-block;
                 margin: 0;
-                margin-top: rem(15);
-                width: 100%;
+                margin-right: rem(10);
+                width: rem(136);
             }
         }
 
-        @media(max-width: $medium-screen) {
+        @media(min-width: $medium-screen) {
+            @include flex-direction(row);
+        }
+
+        .revert-group {
+            @include display(flex);
             @include flex-direction(column);
+
+            .revert-submission-alert {
+                margin: auto;
+                margin-top: rem(5);
+                &.revert-submission-alert_error {
+                    color: $color-secondary-dark;
+                }
+                &.revert-submission-alert_success {
+                    color: $color-green-light;
+                }
+
+                @media(min-width: $medium-screen) {
+                    margin: 0;
+                    margin-top: rem(5);
+                    max-width: rem(136);
+                }
+            }
         }
     }
     
     .publish-certify-buttons {
         @include display(flex);
         @include justify-content(flex-end);
+        @include flex-direction(column);
 
         button {
-            width: rem(200);
-            margin-left: rem(10);
+            margin-top: rem(15);
+            display: block;
+            width: 100%;
 
-            @media(max-width: $medium-screen) {
-                display: block;
-                width: 100%;
+            @media(min-width: $medium-screen) {
+                width: rem(200);
+                display: inline-block;
                 margin: 0;
-                margin-top: rem(15);
+                margin-left: rem(15);
             }
         }
 
-        @media(max-width: $medium-screen) {
-            @include flex-direction(column);
+        @media(min-width: $medium-screen) {
+            @include flex-direction(row);
         }
     }
 
