Adding a warning about unsaved comments at the bottom of the box too

--- a/src/_scss/pages/reviewData/narrative/narrative.scss
+++ b/src/_scss/pages/reviewData/narrative/narrative.scss
@@ -132,6 +132,10 @@
                 &.fa-times-circle {
                     color: $color-secondary-dark;
                 }
+
+                &.fa-exclamation-triangle {
+                    color: #f0ad4e;
+                }
             }
         }
 
