Adding an error state above the comment box
Also updating the error symbol in both error states to be an exclamation not an X in the red circle

--- a/src/_scss/pages/reviewData/_content.scss
+++ b/src/_scss/pages/reviewData/_content.scss
@@ -52,6 +52,11 @@
                 margin-right: rem(5);
                 margin-top: rem(2);
                 color: $color-gold-light;
+
+                &.fa-exclamation-circle {
+                    color: $color-secondary;
+                    font-size: rem(16);
+                }
             }
         }
     }
