--- a/src/_scss/pages/reviewData/narrative/narrative.scss
+++ b/src/_scss/pages/reviewData/narrative/narrative.scss
@@ -129,8 +129,8 @@
                     color: $color-green-light;
                 }
 
-                &.fa-times-circle {
-                    color: $color-secondary-dark;
+                &.fa-exclamation-circle {
+                    color: $color-secondary;
                 }
 
                 &.fa-exclamation-triangle {
