Displaying none on the "after" of the list

--- a/src/_scss/layouts/default/header/_menuBar.scss
+++ b/src/_scss/layouts/default/header/_menuBar.scss
@@ -27,7 +27,7 @@
             display: table;
             margin: 0;
             border-left: 1px solid #3b4452;
-            &:before {
+            &:before, &:after {
                 padding: 0;
                 display: none;
             }
