--- a/src/_scss/pages/dashboard/_dashboardViz.scss
+++ b/src/_scss/pages/dashboard/_dashboardViz.scss
@@ -1,5 +1,8 @@
 .dashboard-viz {
     padding: rem(20);
+    &.no-top-pad {
+        padding-top: 0;
+    }
     h3.dashboard-viz__heading {
         font-size: rem(24);
         font-weight: $font-semibold;
