Another mild CSS tweak

--- a/src/_scss/pages/dashboard/table/_dashboardTable.scss
+++ b/src/_scss/pages/dashboard/table/_dashboardTable.scss
@@ -112,6 +112,7 @@
                     .scroll-box {
                         max-height: rem(75);
                         overflow-y: auto;
+                        overflow-wrap: anywhere;
                     }
 
                     .label-button {
