Fixing a bug with the required filter checks and removing quarter/period from them
+ Also fixing a little CSS and moving remaining sub-options into their proper places

--- a/src/_scss/pages/dashboard/_filterSidebar.scss
+++ b/src/_scss/pages/dashboard/_filterSidebar.scss
@@ -44,6 +44,10 @@
             }
             .filter-sidebar__sub-option-name {
                 font-size: $h5-font-size;
+
+                .filter-sidebar__sub-option-required {
+                    font-size: rem(12);
+                }
             }
         }
     }
