Swapping to periods and making sure we can still send the values correctly
+ Temporarily removing the removeDisabledSelections option until I determine if it's needed anymore at all.

--- a/src/_scss/pages/dashboard/_filterSidebar.scss
+++ b/src/_scss/pages/dashboard/_filterSidebar.scss
@@ -11,6 +11,7 @@
         @import './filters/dashboardAgencyFilter';
         @import './filters/lastModified';
         @import './filters/submissionIdFilter';
+        @import '../generateDetachedFiles/_periodPicker';
         .filter-sidebar__option-heading {
             font-weight: $font-bold;
             font-size: $h3-font-size;
