--- a/src/_scss/pages/dashboard/_filterSidebar.scss
+++ b/src/_scss/pages/dashboard/_filterSidebar.scss
@@ -5,13 +5,12 @@
         color: $color-gray;
         padding: rem(12) rem(20);
         border-bottom: solid rem(2) $color-gray-lighter;
-        @import './filters/quarterPicker';
         @import './filters/fiscalYears';
         @import './filters/rulesFilter';
         @import './filters/dashboardAgencyFilter';
         @import './filters/lastModified';
         @import './filters/submissionIdFilter';
-        @import '../generateDetachedFiles/_periodPicker';
+        @import './filters/_periodPicker';
         .filter-sidebar__option-heading {
             font-weight: $font-bold;
             font-size: $h3-font-size;
