--- a/src/_scss/pages/dashboard/graph/_dashboardGraph.scss
+++ b/src/_scss/pages/dashboard/graph/_dashboardGraph.scss
@@ -77,6 +77,10 @@
                                 padding-left: rem(15);
                                 padding-top: rem(5);
                             }
+                            &.no-border {
+                                border-top: none;
+                                padding-top: 0;
+                            }
                         }
                         &.highlighted {
                             background-color: $color-gray-lighter;
