Adding graying out of bars that aren't being hovered over (if one is hovered over)

--- a/src/_scss/pages/dashboard/graph/_dashboardGraph.scss
+++ b/src/_scss/pages/dashboard/graph/_dashboardGraph.scss
@@ -144,5 +144,11 @@
                 }
             }
         }
+
+        .bar-group {
+            &.faded {
+                opacity: .5;
+            }
+        }
     }
 }
