Clicking on the legend hides the relevant rules from the graph

--- a/src/_scss/pages/dashboard/graph/_dashboardGraph.scss
+++ b/src/_scss/pages/dashboard/graph/_dashboardGraph.scss
@@ -150,5 +150,8 @@
                 opacity: .5;
             }
         }
+        .legend-container {
+            cursor: pointer;
+        }
     }
 }
