--- a/src/_scss/pages/dashboard/graph/_dashboardGraph.scss
+++ b/src/_scss/pages/dashboard/graph/_dashboardGraph.scss
@@ -152,6 +152,10 @@
         }
         .legend-container {
             cursor: pointer;
+
+            .faded {
+                opacity: .5;
+            }
         }
     }
 }
