Adding the drilldown buttons
+ Styling what we have
+ Creating a basic structure for the function passing for the breadcrumbs and drilldown
+ Restructuring props based on new value structure being passed from the backend

--- a/src/_scss/all.scss
+++ b/src/_scss/all.scss
@@ -24,6 +24,7 @@
 @import "pages/generateDetachedFiles/detachedFileA";
 @import "pages/uploadFabsFile/uploadFabsFile";
 @import "pages/history/history";
+@import "pages/rawFiles/rawFiles";
 @import "pages/dashboard/dashboard.scss";
 @import "pages/submission/submissionPage.scss";
 
