Tweaking some CSS and adding the initial content for the data sources page

--- a/src/_scss/all.scss
+++ b/src/_scss/all.scss
@@ -25,6 +25,7 @@
 @import "pages/uploadFabsFile/uploadFabsFile";
 @import "pages/history/history";
 @import "pages/rawFiles/rawFiles";
+@import "pages/dataSources/dataSources";
 @import "pages/dashboard/dashboard.scss";
 @import "pages/submission/submissionPage.scss";
 
