Fixing tests and linter errors and adding proper updated at formatting

--- a/src/_scss/pages/dataSources/dataSources.scss
+++ b/src/_scss/pages/dataSources/dataSources.scss
@@ -21,5 +21,10 @@
                 margin-bottom: rem(5);
             }
         }
+
+        .updated-at {
+            font-style: italic;
+            color: $color-gray;
+        }
     }
 }
