Adding filename and revalidation updates to validation progress bar

--- a/src/_scss/pages/validateData/fileItem/body/textBody.scss
+++ b/src/_scss/pages/validateData/fileItem/body/textBody.scss
@@ -17,6 +17,10 @@
     }
     .usa-da-validate-txt-wrap {
         margin: -35px 0 0 0;
+
+        .usa-da-progress-bar {
+            margin-top: rem(50);
+        }
     }
     .usa-da-validate-loading-message {
         margin: -35px 0 0 0;
