Updating styling for LoginBannerMessage

--- a/src/_scss/layouts/login/loginForm/_loginAlerts.scss
+++ b/src/_scss/layouts/login/loginForm/_loginAlerts.scss
@@ -8,4 +8,10 @@
 	.alert-success {
 		@include successAlert;
 	}
+	.alert-info {
+		@include infoAlert;
+	}
+	.alert-warning {
+		@include warningAlert;
+	}
 }
