--- a/src/_scss/layouts/login/loginForm/_loginAlerts.scss
+++ b/src/_scss/layouts/login/loginForm/_loginAlerts.scss
@@ -4,14 +4,38 @@
 @mixin loginFormAlerts {
 	.alert-error {
 		@include dangerAlert;
+
+		.usa-da-icon {
+            svg {
+                color: #d9534f;
+            } 
+        }
 	}
 	.alert-success {
 		@include successAlert;
+
+		.usa-da-icon {
+            svg {
+                color: #5cb85c;
+            } 
+        }
 	}
 	.alert-info {
 		@include infoAlert;
+
+		.usa-da-icon {
+            svg {
+                color: #5bc0de;
+            } 
+        }
 	}
 	.alert-warning {
 		@include warningAlert;
+
+		.usa-da-icon {
+            svg {
+                color: #f0ad4e;
+            } 
+        }
 	}
 }
