Hiding bottom border box for login banners

--- a/src/_scss/layouts/login/loginForm/loginForm.scss
+++ b/src/_scss/layouts/login/loginForm/loginForm.scss
@@ -63,6 +63,7 @@
 
         padding: rem(15);
         margin-bottom: rem(20);
+        border-bottom: 0 !important;
 
         .container {
             width: 100%;
