Adding last generated to D files

--- a/src/_scss/pages/generateFiles/generateItem/generateItem.scss
+++ b/src/_scss/pages/generateFiles/generateItem/generateItem.scss
@@ -1,32 +1,31 @@
 .usa-da-generate-item-wrap {
-	margin-bottom: 40px;
+    margin-bottom: 40px;
 
-	.usa-da-generate-item {
-		@include display(flex);
-		@include flex-direction(row);
-		width: 100%;
-	    position: relative;
-	    @include align-items(center);
+    .usa-da-generate-item {
+        @include display(flex);
+        @include flex-direction(row);
+        width: 100%;
+        position: relative;
+        @include align-items(center);
 
-	    border: 1px solid $color-gray-lighter;
+        border: 1px solid $color-gray-lighter;
 
-	    .file-full-name {
-			@include flex(0 1 auto);
-			width: 33%;
-			position: relative;
+        .file-full-name {
+            @include flex(0 1 auto);
+            width: 33%;
+            position: relative;
 
-			text-align: left;
-			padding-top: 10px;
-			padding-bottom: 10px;
+            text-align: left;
+            padding: 20px;
 
-			font-weight: bold;
+            .file-name {
+                font-weight: bold;
+            }
+        }
 
-			padding: 20px;
-		}
+        @import "./_dates";
+    }
 
-		@import "./_dates";
-	}
 
-	
-	@import "./_download";
+    @import "./_download";
 }
