--- a/src/_scss/layouts/default/header/_userMenu.scss
+++ b/src/_scss/layouts/default/header/_userMenu.scss
@@ -5,7 +5,7 @@
         display: block;
         float: right;
         height: $top-header-height;
-        margin-top: 0;
+        margin: 0;
     }
     li.usa-da-top-head-menu-item {
         list-style: none;
