Stacking only for bigger bars

--- a/src/_scss/layouts/default/header/header.scss
+++ b/src/_scss/layouts/default/header/header.scss
@@ -29,8 +29,10 @@
             content: none;
         }
 
-        @media(max-width: $medium-screen) {
-            @include flex-direction(column);
+        &.stacked {
+            @media(max-width: $medium-screen) {
+                @include flex-direction(column);
+            }
         }
     }
 
